src/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>FinServ__Opportunity Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Documentation Sent</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
        <values>
            <fullName>Waiting for Client%27s Feedback</fullName>
        </values>
        <values>
            <fullName>Waiting for Winning</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>FinServ__Wallet Share</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Documentation Sent</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
        <values>
            <fullName>Waiting for Client%27s Feedback</fullName>
        </values>
        <values>
            <fullName>Waiting for Winning</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>booking__SalesProcess</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Branch__c</fullName>
        <label>Branch</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Branch</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Retail</fullName>
                </value>
                <value>
                    <fullName>Wealth</fullName>
                </value>
                <value>
                    <fullName>Commercial</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CurrentGenerators__c</fullName>
        <label>Current Generator(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeliveryInstallationStatus__c</fullName>
        <label>Delivery/Installation Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In progress</fullName>
                </value>
                <value>
                    <fullName>Yet to begin</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Expected_Margin__c</fullName>
        <formula>IF(ISPICKVAL(Category__c, &quot;Retail&quot;), 0.2, 
		IF(ISPICKVAL(Category__c, &quot;Wealth&quot;), 0.3, 0.5))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expected Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>ExternalId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__FinancialAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Financial Account</label>
        <referenceTo>FinServ__FinancialAccount__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Financial_Account_Role__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Financial Account Role</label>
        <referenceTo>FinServ__FinancialAccountRole__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LOB_Referring__c</fullName>
        <formula>Text (Referral__r.LOB_Referring__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LOB Referring</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loss_Reason__c</fullName>
        <label>Loss Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unknown</fullName>
                    <default>true</default>
                    <label>Unknown</label>
                </value>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Timing</fullName>
                </value>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>Fit</fullName>
                </value>
                <value>
                    <fullName>Authority</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MainCompetitors__c</fullName>
        <label>Main Competitor(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mock__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mock</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OpportunityId__c</fullName>
        <formula>Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OpportunityId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderNumber__c</fullName>
        <label>Order Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductId__c</fullName>
        <label>ProductId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Line__c</fullName>
        <label>Product Line</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Category__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Business Checking Account</fullName>
                </value>
                <value>
                    <fullName>Business Savings Account</fullName>
                </value>
                <value>
                    <fullName>Commercial Credit Card</fullName>
                </value>
                <value>
                    <fullName>Commercial Loans</fullName>
                </value>
                <value>
                    <fullName>Commercial Real Estate</fullName>
                </value>
                <value>
                    <fullName>Construction</fullName>
                </value>
                <value>
                    <fullName>Custody</fullName>
                </value>
                <value>
                    <fullName>Equipment Lease</fullName>
                </value>
                <value>
                    <fullName>HELOC</fullName>
                </value>
                <value>
                    <fullName>Line of Credit</fullName>
                </value>
                <value>
                    <fullName>Managed Wealth</fullName>
                </value>
                <value>
                    <fullName>Non-Managed Wealth</fullName>
                </value>
                <value>
                    <fullName>Personal CD</fullName>
                </value>
                <value>
                    <fullName>Personal Checking</fullName>
                </value>
                <value>
                    <fullName>Personal Credit Card</fullName>
                </value>
                <value>
                    <fullName>Personal IRA - Savings</fullName>
                </value>
                <value>
                    <fullName>Personal Loans / Lines</fullName>
                </value>
                <value>
                    <fullName>Residential Mortgage</fullName>
                </value>
                <value>
                    <fullName>Trading</fullName>
                </value>
                <value>
                    <fullName>Trust</fullName>
                </value>
                <value>
                    <fullName>Vehicle Loan</fullName>
                </value>
                <value>
                    <fullName>Warehouse Mortgage</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PushNotificationRead__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Push Notification Read</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PushNotificationSent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Push Notification Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Referral__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the referral that is linked to the opportunity</description>
        <label>Referral</label>
        <referenceTo>Referral__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Referred_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Referring_Branch__c</fullName>
        <label>Outside Referral</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referring_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referring Customer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Referring_Employee_ID__c</fullName>
        <label>Referring Employee ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revenue__c</fullName>
        <formula>IF(ISPICKVAL(Category__c, &quot;Retail&quot;), Sum_of_Total_Prices__c * 0.2,
		IF(ISPICKVAL(Category__c, &quot;Wealth&quot;), Sum_of_Total_Prices__c * 0.3, Sum_of_Total_Prices__c * 0.5))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Profit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SocialAccountContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Social Account Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Social Account Contact)</relationshipLabel>
        <relationshipName>SocialOpportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sum_of_Total_Prices__c</fullName>
        <label>Revenue</label>
        <summarizedField>OpportunityLineItem.TotalPrice</summarizedField>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TrackingNumber__c</fullName>
        <label>Tracking Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>booking__BookingBug_Branch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BookingBug Branch</label>
        <referenceTo>booking__Branch__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>booking__BookingBug_Id__c</fullName>
        <externalId>true</externalId>
        <label>BookingBug Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>booking__Long_id__c</fullName>
        <label>Long Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OpportunityId__c</columns>
        <columns>PushNotificationRead__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Opportunities</label>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>Default_Opportunity_Pipeline</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_MONTHS:3</value>
        </filters>
        <label>Opportunity Pipeline</label>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Opportunities</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>PushNotificationRead__c</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Private</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.PRIVATE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Private</label>
    </listViews>
    <listViews>
        <fullName>Won</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Won</label>
    </listViews>
    <recordTypes>
        <fullName>FinServ__General</fullName>
        <active>true</active>
        <businessProcess>FinServ__Opportunity Process</businessProcess>
        <label>General</label>
    </recordTypes>
    <recordTypes>
        <fullName>FinServ__RetirementPlanning</fullName>
        <active>true</active>
        <businessProcess>FinServ__Wallet Share</businessProcess>
        <label>Retirement Planning</label>
    </recordTypes>
    <recordTypes>
        <fullName>FinServ__WalletShareOpportunity</fullName>
        <active>true</active>
        <businessProcess>FinServ__Wallet Share</businessProcess>
        <label>Opportunity (Wallet Share)</label>
    </recordTypes>
    <recordTypes>
        <fullName>booking__OppRecType</fullName>
        <active>true</active>
        <businessProcess>booking__SalesProcess</businessProcess>
        <label>OppRecType</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>